Made little Updates to it but

--- a/Sentiment_Analysis_on_Elon_Musk.ipynb
+++ b/Sentiment_Analysis_on_Elon_Musk.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBSX4M3vnJY8lzwkGTwctd",
+      "authorship_tag": "ABX9TyN8sUo5btinGX/DGh4O3PnY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,12 @@
       "source": [
         "# Sentiment Analysis on Elon Musk\n",
         "\n",
-        "#### By Samuel Do"
+        "### Project Description and Background\n",
+        "\n",
+        "A sentiment analysis is the act of computationally recognizing and classifying opinions stated in a text, particularly to ascertain if the writer has a favorable, negative, or neutral viewpoint on a certain subject, item, etc. For this sentiment analysis, I decided to do Elon Musk. Elon Musk has been on the news recently when he decided to buy twitter (as of October 27, 2022). When that happened, that stir up a lot of controversy. So it got me thinking, what would Elon Musk twitter page look like now? We know that he is a controversial figure, but him buying twitter changes it again. Now we will analyze Elon Musk's Twitter page to determine how sentiment his page is.\n",
+        "\n",
+        "\n",
+        "##### By Samuel Do"
       ],
       "metadata": {
         "id": "XLc4wsmnC5lp"
@@ -279,7 +284,7 @@
         "# make sure there are no extra white space in your txt file\n",
         "# upload this text file to Google Colab:\n",
         "\n",
-        "txtfile = files.upload()\n",
+        "txtfile = files.upload() \n",
         "keys =  txtfile.get('twkeys.txt').splitlines()\n",
         "\n",
         "# test your keys and secrets are correct or not:\n",
